css file and html change

--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<h1>Hallo there, this works?<h1>
+
+<head>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+<h1>Hallo there, this works??????</h1>
+</body>
