--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Test</title>
 </head>
-
 <body>
-<h1>Hallo there, this works??????</h1>
+    <h1>Hallo there, this works??????</h1>
 </body>
+</html>
